--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -1,10 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="#F9C42A"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imglogosplash"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        />
+    <TextView
+        android:id="@+id/textsplash"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="vegitto"
+        android:textSize="25sp"
+        android:layout_below="@id/imglogosplash"/>
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/pgrsbarsplash"
+        android:layout_margin_up=""
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/textsplash"
+        android:layout_width="150sp"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        />
+
+</RelativeLayout>
